--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,18 +6,29 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.15.1 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^4.0.4
+  dio: ^5.7.0
   flutter_bloc: ^8.0.1
+  json_annotation: ^4.9.0
+  freezed_annotation: ^2.4.4
+  retrofit: ^4.4.1
+  get_it: ^7.0.0
+  bloc: ^8.1.4
+  injectable: ^2.4.4
 
 dev_dependencies:
-  flutter_lints: ^1.0.0
+  build_runner: ^2.4.11
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.5.2
+  injectable_generator: ^2.6.2
+  json_serializable: ^6.8.0
+  retrofit_generator: ^8.2.1
 
 flutter:
   uses-material-design: true
